Colaboratory を使用して作成しました

--- a/kaggle07import.ipynb
+++ b/kaggle07import.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle07import.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3/xqQBd/o7wZ2u58rly3L",
+      "authorship_tag": "ABX9TyOkiFlxwDPb3PU2J4l1RN0m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -904,16 +904,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yCjSKDK1wBf6",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "kdVs_Z5xI5ci",
         "colab_type": "text"
       },
@@ -942,7 +932,7 @@
         "rolls = numpy.random.randint(low=1, high=6, size=10)\n",
         "rolls <= 3"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -986,7 +976,7 @@
         "x = numpy.asarray(xlist)\n",
         "print(\"xlist = {}\\nx =\\n{}\".format(xlist, x))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,7 +1005,7 @@
         "# Get the last element of the second row of our numpy array\n",
         "x[1,-1]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1089,7 +1079,7 @@
         "# Add them together to get...\n",
         "a + b"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1206,17 +1196,11 @@
       "source": [
         "これらが、演算子オーバーロードに直接関係している。\n",
         "\n",
+        "Pythonのプログラマーが自分の作った型に演算子を定義する際、まず `__lt__`、`__setattr__`、`__contains__`のような前後に2つずつアンダースコアがついた名前のメソッドを作る。このダブル・アンダースコア書式ではPythonにとって一般に特殊な意味を持つ。\n",
         "\n",
-        "When Python programmers want to define how operators behave on their types, they do so by implementing methods with special names beginning and ending with 2 underscores such as __lt__, __setattr__, or __contains__. Generally, names that follow this double-underscore format have a special meaning to Python.\n",
+        "例えば、`[1, 2, 3]`が裏で`__contains__`を呼び出すとすると、それは`[1, 2, 3].__contains__(x)`としていることになる。\n",
         "\n",
-        "So, for example, the expression x in [1, 2, 3] is actually calling the list method __contains__ behind-the-scenes. It's equivalent to (the much uglier) [1, 2, 3].__contains__(x).\n",
-        "\n",
-        "If you're curious to learn more, you can check out Python's official documentation, which describes many, many more of these special \"underscores\" methods.\n",
-        "\n",
-        "We won't be defining our own types in these lessons (if only there was time!), but I hope you'll get to experience the joys of defining your own wonderful, weird types later down the road.\n",
-        "\n",
-        "Your turn!\n",
-        "Head over to the final coding exercise for one more round of coding questions involving imports, working with unfamiliar objects, and, of course, more gambling."
+        "この辺を興味があって学びたいならばPythonの公式ドキュメントにたくさんのアンダースコア・メソッドについて書いてある。このレッスンでは扱わない。"
       ]
     },
     {
@@ -1236,7 +1220,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Exercises\n",
+        "### 問題 1.\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
