--- a/kaggle07import.ipynb
+++ b/kaggle07import.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle07import.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOk6xYAZDYJZuxRqv7j7NTu",
+      "authorship_tag": "ABX9TyPkxG2vG9jUXdDfXiWIUrqs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1321,15 +1321,19 @@
         "]\n",
         "```\n",
         "\n",
-        "'items' is a list of all the power-up items the racer picked up in that race, and 'finish' was their placement in the race (1 for first place, 3 for third, etc.).\n",
+        "'items'はレーサーがレースで拾ったパワーアップアイテムのリスト、`finish`はレースでの順位。1が1位で、3が3位。\n",
         "\n",
-        "He wrote the function below to take a list like this and return a dictionary mapping each item to how many times it was picked up by first-place finishers.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "```\n",
+        "このようなリストを受取り、アイテムごとに何人の1位のレーサーがそのアイテムを拾ったかを算出する関数を書いた。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dDAEYk1L7Lua",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "def best_items(racers):\n",
         "    \"\"\"Given a list of racer dictionaries, return a dictionary mapping items to the number\n",
         "    of times those items were picked up by racers who finished in first place.\n",
@@ -1351,29 +1355,50 @@
         "            print(\"WARNING: Encountered racer with unknown name on iteration {}/{} (racer = {})\".format(\n",
         "                i+1, len(racers), racer['name'])\n",
         "                 )\n",
-        "    return winner_item_counts\n",
-        "```\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "He tried it on a small example list above and it seemed to work correctly:\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "```\n",
+        "    return winner_item_counts"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fcrWXY4U7Oql",
+        "colab_type": "text"
+      },
+      "source": [
+        "サンプルリストを作り、試したところ正しく作動しているようだ。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CFy0oXkM7pAs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "sample = [\n",
         "    {'name': 'Peach', 'items': ['green shell', 'banana', 'green shell',], 'finish': 3},\n",
         "    {'name': 'Bowser', 'items': ['green shell',], 'finish': 1},\n",
         "    {'name': None, 'items': ['mushroom',], 'finish': 2},\n",
         "    {'name': 'Toad', 'items': ['green shell', 'mushroom'], 'finish': 1},\n",
         "]\n",
-        "best_items(sample)\n",
-        "```\n",
+        "best_items(sample)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w6m5ltmT7tFX",
+        "colab_type": "text"
+      },
+      "source": [
+        "しかし、本物のデータベースで走らせたところ、`TypeError`でクラッシュしてしまった。\n",
         "\n",
-        "\n",
+        "なぜか。\n",
         "\n",
         "\n",
         "However, when he tried running it on his full dataset, the program crashed with a TypeError.\n",
