Colaboratory を使用して作成しました

--- a/kaggle07import.ipynb
+++ b/kaggle07import.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle07import.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPkxG2vG9jUXdDfXiWIUrqs",
+      "authorship_tag": "ABX9TyNOHaMFuqju1oYOrI5EoRGi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1439,14 +1439,25 @@
         "# Try analyzing the imported full dataset\n",
         "best_items(full_dataset)\n",
         "```\n",
-        "\n",
-        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gXou9eidHM6_",
+        "colab_type": "text"
+      },
+      "source": [
         "### 問題 3.\n",
-        "Suppose we wanted to create a new type to represent hands in blackjack. One thing we might want to do with this type is overload the comparison operators like > and <= so that we could use them to check whether one hand beats another. e.g. it'd be cool if we could do this:\n",
         "\n",
+        "\n",
+        "Suppose we wanted to create a new type to represent hands in blackjack. One thing we might want to do with this type is overload the comparison operators like > and <= so that we could use them to check whether one hand beats another. e.g. it'd be cool if we could do this:\n",
+        "```\n",
         ">>> hand1 = BlackjackHand(['K', 'A'])\n",
         ">>> hand2 = BlackjackHand(['7', '10', 'A'])\n",
         ">>> hand1 > hand2\n",
+        "```\n",
         "True\n",
         "Well, we're not going to do all that in this question (defining custom classes is a bit beyond the scope of these lessons), but the code we're asking you to write in the function below is very similar to what we'd have to write if we were defining our own BlackjackHand class. (We'd put it in the __gt__ magic method to define our custom behaviour for >.)\n",
         "\n",
@@ -1455,16 +1466,35 @@
         "\n",
         "\n",
         "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VKVeDZdwHa3N",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
-        "\n",
-        "def blackjack_hand_greater_than(hand_1, hand_2):\n",
+        "def blackjack_hand_greater_than:\n",
         "    \"\"\"\n",
         "    Return True if hand_1 beats hand_2, and False otherwise.\n",
         "    \n",
         "    In order for hand_1 to beat hand_2 the following must be true:\n",
         "    - The total of hand_1 must not exceed 21\n",
         "    - The total of hand_1 must exceed the total of hand_2 OR hand_2's total must exceed 21\n",
-        "    \n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I1SuRtq6HdCS",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
         "    Hands are represented as a list of cards. Each card is represented by a string.\n",
         "    \n",
         "    When adding up a hand's total, cards with numbers count for that many points. Face\n",
