Colaboratory を使用して作成しました

--- a/kaggle01hello.ipynb
+++ b/kaggle01hello.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle01hello.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPf+SLytd1WylgIpKvUPn/d",
+      "authorship_tag": "ABX9TyMhuRif7OQDjF08SO5XbzsQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,8 +108,6 @@
         "colab_type": "text"
       },
       "source": [
-        "説明する。\n",
-        "\n",
         "短い馬鹿げたプログラムだが、Pythonコードがどんなものか、どういうふうに実行されるかについて重要な点が表現されている。"
       ]
     },
@@ -207,16 +205,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9IvLVLhiIrDv",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "lkcEh9wZZ3Fp",
         "colab_type": "text"
       },
@@ -275,13 +263,11 @@
         "colab_type": "text"
       },
       "source": [
-        "どのようにして、コードの `if` に属する部分を区別しているかについて説明する。\n",
+        "どのようにして、コードの `if` に属する部分を区別しているか。\n",
         "\n",
         " \"I don't want ANY money!\" が出力されるのは、amount_in_dollars が正の値の時だけ。ところが、そのあとのコード(たとえば print(money_song))は条件にかかわらず実行される。Pythonはどうやってこれを区別しているのか。\n",
         "\n",
-        "`if` のある行のコロン `(:)` がコードブロックが始まることを示す。そのあとのインデントされている行がコードブロックを形成する。他の言語は一般的には`{curly braces}`でコードブロックの始まりと終わりを示す。Pythonがホワイトスペースに意味付けをして使うことは、他の言語に慣れたプログラマーが驚くが、実際には統一的で読みやすいコードになる。\n",
-        "\n",
-        "他の言語でもコードブロックをインデントすることによって読みやすくすることはあるが、必須ではない。プログラマーに任されている。"
+        "`if` のある行のコロン `(:)` がコードブロックが始まることを示す。そのあとのインデントされている行がコードブロックを形成する。他の言語は一般的には`{curly braces}`でコードブロックの始まりと終わりを示す。Pythonがホワイトスペースに意味付けをして使うことは、他の言語に慣れたプログラマーが驚くが、実際には統一的で読みやすいコードになる。"
       ]
     },
     {
@@ -291,14 +277,14 @@
         "colab_type": "text"
       },
       "source": [
-        "次からの行はmoney_songを扱っていて、4スペースでインデントされていないので、if のコードブロックには属していない。インデントされたコードブロックの例はあとで関数の定義とくり返しの説明の時に出てきます。\n",
+        "次からの行はmoney_songを扱っていて、4スペースでインデントされていないので、if のコードブロックには属していない。インデントされたコードブロックの例はあとで関数の定義とくり返しの説明の時にも出てくる。\n",
         "\n",
-        "このコードスニペットで初めてPythonにおける文字列の例が出てきています。\n",
+        "このコードスニペットで初めてPythonにおける文字列の例が出てきている。\n",
         "```\n",
         "\"I don't want ANY money!\"\n",
         "```\n",
         "\n",
-        "文字列はダブルクォートもしくはシングルクォートで囲まれます。この例の場合は文字列がシングルクォートを含んでいますので、なんらかの対応をしないと全体をシングルクォートで囲むことはできません。対応方法については後述します。\n"
+        "文字列はダブルクォートもしくはシングルクォートで囲まれる。この例の場合は文字列がシングルクォートを含んでいるので、なんらかの対応をしないと全体をシングルクォートで囲むことはできない。対応方法については後述する。\n"
       ]
     },
     {
@@ -334,7 +320,7 @@
         "colab_type": "text"
       },
       "source": [
-        "演算子`*` はふつうはふたつの数字を掛け合わせる (3 * 3 -> 9) のに使われますが、おもしろいことに文字列に演算子 `*` を使うと文字列の繰り返しになります。他にも演算子 `+` が数字に使われる時と文字列に使われる時が違う意味で便利に使えるようになっています。この仕組みを演算子オーバーロードと言います。"
+        "演算子`*` はふつうはふたつの数字を掛け合わせる `(3 * 3 -> 9)` のに使われるが、文字列に演算子 `*` を使うと文字列の繰り返しになる。他にも演算子 `+` が数字に使われる時と文字列に使われる時が違う意味で便利に使えるようになっている。この仕組みを演算子オーバーロードと言う。"
       ]
     },
     {
@@ -345,7 +331,8 @@
       },
       "source": [
         "## Pythonの数字と演算について\n",
-        "すでに数字を含む変数の例を一つ見ました。\n"
+        "\n",
+        "すでに数字を含む変数の例を一つ見た。\n"
       ]
     },
     {
@@ -368,7 +355,7 @@
         "colab_type": "text"
       },
       "source": [
-        "数字にもいろんな種類がある。Pythonの`type`という関数を使うと、型 `type` を表示するできます。\n"
+        "数字にもいろんな種類がある。Pythonの`type`という関数を使うと、型 `type` を表示できる。\n"
       ]
     },
     {
@@ -434,8 +421,7 @@
         "colab_type": "text"
       },
       "source": [
-        "これで、amount_in_dollarsが `int` であることがわかりました。`int` は integer (整数) の省略形です。\n",
-        "次はどうでしょうか。\n"
+        "これで、amount_in_dollarsが `int` であることがわかった。`int` は integer (整数) の省略形。"
       ]
     },
     {
@@ -476,9 +462,9 @@
       },
       "source": [
         "\n",
-        "`float` は浮動小数点型で重さや割合を表すのに便利な数字です。\n",
+        "`float` は浮動小数点型。\n",
         "\n",
-        "`type()` は `print()` と同様にPythonに始めからあるビルトイン関数の一つです。型を確認するのに便利に使えます。\n",
+        "`type()` は `print()` と同様にPythonの組み込み関数の一つ。型を確認するのに便利に使える。\n",
         "\n",
         "数字について電卓にあるような四則演算の演算子は Python にもある。"
       ]
@@ -501,7 +487,9 @@
         "|a ** b\t| Exponentiation |\t a raised to the power of b |\n",
         "|-a\t    | Negation\t     |   The negative of a |\n",
         "\n",
-        "割り算の演算子が2種類あることに注意してください。\n",
+        "\n",
+        "割り算の演算子が2種類あることに注意。\n",
+        "\n",
         "電卓の割り算は \"True division\" です。\n"
       ]
     },
@@ -557,6 +545,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P5MTeS7lRUuO",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
