Colaboratory を使用して作成しました

--- a/kaggle02function.ipynb
+++ b/kaggle02function.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle02function.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOV9FGNfMtbQz6K1e5aQfYK",
+      "authorship_tag": "ABX9TyNOu3wZwU/2VLQxdH38s45G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,17 +28,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "bjTv0I0rx64k",
+        "colab_type": "text"
+      },
+      "source": [
+        "# メモ\n",
+        "\n",
+        "1. kaggleのPython tutorialをベスにColabのノートブックを作成している。\n",
+        "1. Colabで開いて読まれることを想定。\n",
+        "1. 元ファイル(https://www.kaggle.com/colinmorris/functions-and-getting-help )\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NQwRTni4u7L9",
         "colab_type": "text"
       },
       "source": [
         "# 関数の使い方と作り方\n",
         "\n",
-        "cf. https://www.kaggle.com/colinmorris/functions-and-getting-help\n",
-        "\n",
-        "これから関数について、学びますが、もし忘れたらどうしますか？\n",
-        "\n",
-        "関数 help()というとても便利な関数があるのでまずこれから覚えましょう。\n",
+        "関数 help()というとても便利な関数があるのでまずこれから覚えよう。\n",
         "\n"
       ]
     },
@@ -83,30 +94,38 @@
       },
       "source": [
         "## help(round)の結果についての説明\n",
+        "```\n",
+        "round(number[, ndigits])\n",
+        "```\n",
+        "最初に示されるこの意味は、関数round()は引数としてnumberを取り、オプションとして引数ndigitsを取る、ということ。\n",
         "\n",
-        "round(number[, ndigits]). \n",
-        "\n",
-        "最初に示されるこの意味は、関数round()は引数としてnumberを取り、オプションとして引数ndigitsを取る、ということです。\n",
-        "\n",
-        "あと英語による簡単な説明があってその中で引数について言及があります。関数round()の場合、\n",
+        "あと英語による簡単な説明があってその中で引数について言及がある。関数round()の場合、\n",
         "\n",
         ">>\n",
         "与えられた精度でnumberを四捨五入する。精度の桁数はデフォルトは0なので、引数が1つのとき、整数intが返される。それ以外の場合は返される数字の型は引数と同じ型になる。ndigitsはマイナスも可能である。\n",
         ">>\n",
         "\n",
-        "というような説明があります。\n",
+        "というような説明がある。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3_Gri6s6yyXn",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
-        "次のコードを実行してみて下さい。\n",
+        "次のコードを実行してみよう。\n",
         "\n",
-        "* help(round(-2.01))\n",
-        "\n",
+        "* round(-2.01)\n",
         "* round(3.12345455, -2)\n",
         "* round(1234567, 3)\n",
         "* round(1234567, -3)\n",
         "\n",
-        "他の関数についてもhelp()を実行してみましょう\n",
+        "他の関数についてもhelp()を実行してみよう。\n",
         "\n",
-        "* help(abs()\n"
+        "* help(abs)"
       ]
     },
     {
@@ -117,7 +136,7 @@
         "colab": {}
       },
       "source": [
-        "help(round(-2.01))"
+        "round(-2.01)"
       ],
       "execution_count": null,
       "outputs": []
@@ -129,9 +148,19 @@
         "colab_type": "text"
       },
       "source": [
-        "round()は単純で説明の短い関数でした。\n",
+        "`round()`は単純で説明の短い関数だった。\n",
         "\n",
-        "関数print()の場合、print()が複雑でいろんな使い方ができるので、help()の結果も長くなります。いまの段階では出力がわからなくても気にしないで下さい。なにかわかること、役に立つことがあるかどうか見る、というのがいいでしょう。\n"
+        "関数`print()`の場合、`print()`が複雑でいろんな使い方ができるので、`help()`の結果も長くなる。いまの段階では出力がわからなくても気にしない。なにかわかること、役に立つことがあるかどうかさがす、という態度でよい。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EXTVXE7sz5mH",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
