Colaboratory を使用して作成しました

--- a/haskel01.ipynb
+++ b/haskel01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskel01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDtIt6VYxsEoqlZVaw3esf",
+      "authorship_tag": "ABX9TyPaQ4c5wm0IGR/nCl91trEp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,8 @@
         "1. Colabの環境を利用して`Haskell`を勉強する。\n",
         "1. 読者は別途自分の環境に`Haskell`をインストールして対話環境`ghci`を立ち上げていて、このファイルはColabで開いていることを想定する。\n",
         "1. プログラムについて、HaskellとPythonの両方で動かすことによって理解を深める。\n",
-        "1. とりあえずはHaskellの入門書や入門サイトからサンプルプログラムを入力してみる。\n"
+        "1. とりあえずはHaskellの入門書や入門サイトからサンプルプログラムを入力してみる。\n",
+        "1. https://wiki.haskell.org/Haskell入門_5ステップ\n"
       ]
     },
     {
@@ -144,7 +145,10 @@
         "\n",
         "```\n",
         "Prelude> let fac n = if n == 0 then 1 else n * fac (n-1)\n",
-        "```\n"
+        "```\n",
+        "うむ。階乗を計算する関数を作っている。ちょっと実験以上かもしれない。\n",
+        "\n",
+        "しかし、やってみよう。"
       ]
     },
     {
@@ -152,18 +156,116 @@
       "metadata": {
         "id": "ZB9pZ3HRB17P",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "72489f06-b351-434c-af4b-c08ceb709124"
       },
       "source": [
-        ""
+        "def fac (n) :\n",
+        "    if n == 0 :\n",
+        "        return 1\n",
+        "    else :\n",
+        "        return n * fac (n - 1)\n",
+        "\n",
+        "fac (5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "id": "w5wAydKX2cYY",
+        "colab_type": "text"
+      },
+      "source": [
+        "ま、とりあえずできたということで。\n",
+        "\n",
+        "Pythonに確か一行で書く書き方があったと思う。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hF8Ft7ExEOsn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7feeb042-c7fc-4614-d781-d46bbfa0b76a"
+      },
+      "source": [
+        "def fac (n) :\n",
+        "    return 1 if n == 0 else n * fac(n - 1)\n",
+        "\n",
+        "fac(5)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rEZTqC08FVKf",
+        "colab_type": "text"
+      },
+      "source": [
+        "`ternary operator` 三項演算子と言うらしい。\n",
+        "\n",
+        "`n`を大きくすると、Haskellは大丈夫だけどPythonは落ちる。エラーになる。比較の階層が深すぎるって。この辺は素のままでは最適化されていないみたい。\n",
+        "\n",
+        "Haskellではパターンマッチングを使って次のように書く方が普通かもしれない。\n",
+        "```\n",
+        "fac 0 = 1\n",
+        "fac n = n * fac (n-1)\n",
+        "\n",
+        "main = print (fac 42)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Eh0YyntvF0O-",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 四則演算"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xrXWasfNF4tO",
         "colab_type": "text"
       },
       "source": [
