Colaboratory を使用して作成しました

--- a/haskel01.ipynb
+++ b/haskel01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskel01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPaQ4c5wm0IGR/nCl91trEp",
+      "authorship_tag": "ABX9TyPEBH/gjUPRb97Pb0vkdEcO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,11 @@
         "1. 読者は別途自分の環境に`Haskell`をインストールして対話環境`ghci`を立ち上げていて、このファイルはColabで開いていることを想定する。\n",
         "1. プログラムについて、HaskellとPythonの両方で動かすことによって理解を深める。\n",
         "1. とりあえずはHaskellの入門書や入門サイトからサンプルプログラムを入力してみる。\n",
-        "1. https://wiki.haskell.org/Haskell入門_5ステップ\n"
+        "1. https://wiki.haskell.org/Haskell入門_5ステップ\n",
+        "1. 10分で学ぶHaskell (https://wiki.haskell.org/10分で学ぶHaskell)\n",
+        "1. Learn You A Haskell For Great Good! (http://learnyouahaskell.com/)\n",
+        "1. A Gentle Introduction to Haskell (https://www.haskell.org/tutorial/)\n",
+        "1. Yet Another Haskell Tutorial (http://users.umiacs.umd.edu/~hal/docs/daume02yaht.pdf)"
       ]
     },
     {
@@ -71,7 +75,7 @@
       "source": [
         "\"Hello, World\""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +103,7 @@
       "source": [
         "この辺は動きは同じみたい。\n",
         "\n",
-        "Haskellの対話型環境のプロンプトは`Prelude>`で、Pythonは`>>>`だけど気にしない。\n",
+        "Haskellの対話型環境のプロンプトは`Prelude>`で、Pythonは`>>>`。\n",
         "\n",
         "```\n",
         "Prelude> putStrLn \"Hello World\"\n",
@@ -121,7 +125,7 @@
       "source": [
         "print (\"Hello\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +175,7 @@
         "\n",
         "fac (5)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +220,7 @@
         "\n",
         "fac(5)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -255,6 +259,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "gbJVKth8h6c4",
+        "colab_type": "text"
+      },
+      "source": [
+        "さすがこれはPythonにはないか。\n",
+        "\n",
+        "並列化プログラミングとかもとばし。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Eh0YyntvF0O-",
         "colab_type": "text"
       },
@@ -269,8 +285,130 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "```\n",
+        "Prelude> 3 * 5\n",
+        "15\n",
+        "Prelude> 4 ^ 2 - 1\n",
+        "15\n",
+        "Prelude> (1 - 5)^(3 * 2 - 4)\n",
+        "16\n",
+        "```"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p-t3ybJWj1ol",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "54e2b19a-f167-4fec-8d62-31c8fd226e0c"
+      },
+      "source": [
+        "print (3 * 5)\n",
+        "print (4 ** 2 - 1)\n",
+        "print ((1 - 5) ** (3 * 2 - 4))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15\n",
+            "15\n",
+            "16\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RmNmUAP-k2Oc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Pythonで`^`は`exclusiv bit-wise`で普通の冪乗の意味には使えなくて`**`を使う。\n",
+        "\n",
+        "```\n",
+        "Prelude> \"Hello\"\n",
+        "\"Hello\"\n",
+        "Prelude> \"Hello\" ++ \", Haskell\"\n",
+        "\"Hello, Haskell\"\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9-20faExlrz9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "7bface3e-3819-4002-a46d-d86482725793"
+      },
+      "source": [
+        "\"Hello\" + \", Python!!!!\""
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Hello, Python!!!!'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Awt28XplzFA",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "Prelude> succ 5\n",
+        "6\n",
+        "Prelude> truncate 6.59\n",
+        "6\n",
+        "Prelude> round 6.59\n",
+        "7\n",
+        "Prelude> sqrt 2\n",
+        "1.4142135623730951\n",
+        "Prelude> not (5 < 3)\n",
+        "True\n",
+        "Prelude> gcd 21 14\n",
+        "7\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5a9cEfnAl8aD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
