Colaboratory を使用して作成しました

--- a/haskel01.ipynb
+++ b/haskel01.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "haskel01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPEBH/gjUPRb97Pb0vkdEcO",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOCAiEY9/3kmUvNZXvmpVpd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +39,7 @@
         "1. プログラムについて、HaskellとPythonの両方で動かすことによって理解を深める。\n",
         "1. とりあえずはHaskellの入門書や入門サイトからサンプルプログラムを入力してみる。\n",
         "1. https://wiki.haskell.org/Haskell入門_5ステップ\n",
-        "1. 10分で学ぶHaskell (https://wiki.haskell.org/10分で学ぶHaskell)\n",
+        "1. 10分で学ぶHaskell (https://wiki.haskell.org/10分で学ぶHaskell) <= いまここ\n",
         "1. Learn You A Haskell For Great Good! (http://learnyouahaskell.com/)\n",
         "1. A Gentle Introduction to Haskell (https://www.haskell.org/tutorial/)\n",
         "1. Yet Another Haskell Tutorial (http://users.umiacs.umd.edu/~hal/docs/daume02yaht.pdf)"
@@ -143,9 +144,18 @@
         "colab_type": "text"
       },
       "source": [
-        "えっと、HaskellはputStrLnで、Pythonがなぜprintかというと、Haskellは文字列と改行を入れていることを明示したいと考えて、Pythonは改行を入れていることを隠したいと考えていて、どちらがいいかとは言えないけれど、ポリシーの違い。print関係はごく初歩の導入時から使うのでこの辺がPythonのうまいところというかいいところかもしれない。初心者にやさしい。\n",
+        "えっと、Haskellは`putStrLn`で、Pythonがなぜ`print`か。Haskellにも`print`はあったし、改行も自動で入る。まあいいか。改行コードをエスケープで入れたときの挙動とかが違う。\n",
         "\n",
-        "カッコのあるなしは、ポリシーの違いというより、全体の設計なので、これはどっちでもいいけどそれぞれの言語で統一されていればいい。Pythonが関数全部にカッコが要るようになったのはPython 3以降なので威張れたものではない。\n",
+        "```\n",
+        "Prelude> print \"Haskell\\nand\\nPython\"\n",
+        "\"Haskell\\nand\\nPython\"\n",
+        "Prelude> putStrLn \"Haskell\\nand\\nPython\"\n",
+        "Haskell\n",
+        "and\n",
+        "Python\n",
+        "```\n",
+        "\n",
+        "カッコのあるなしは、ポリシーの違いというより、全体の設計なので、これはどっちでもいいけどそれぞれの言語で統一されていればいい。Pythonが関数全部にカッコが要るようになったのは `Python 3` 以降なので威張れたものではない。\n",
         "\n",
         "```\n",
         "Prelude> let fac n = if n == 0 then 1 else n * fac (n-1)\n",
@@ -265,7 +275,7 @@
       "source": [
         "さすがこれはPythonにはないか。\n",
         "\n",
-        "並列化プログラミングとかもとばし。"
+        "並列化プログラミングとかも飛ばそう。いまどきPythonにもあるかもしれないし。"
       ]
     },
     {
@@ -311,7 +321,7 @@
         "print (4 ** 2 - 1)\n",
         "print ((1 - 5) ** (3 * 2 - 4))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +365,7 @@
       "source": [
         "\"Hello\" + \", Python!!!!\""
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,13 +412,139 @@
       "metadata": {
         "id": "5a9cEfnAl8aD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "ad94f55c-63a2-4dba-82dd-a5afc3ed92d1"
       },
       "source": [
-        ""
+        "def succ (n) :\n",
+        "    return n + 1\n",
+        "\n",
+        "def truncate (x) :\n",
+        "    return int(x)\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "print (succ(5))\n",
+        "print (truncate(6.59))\n",
+        "print (round (6.59))\n",
+        "print (math.sqrt(2))\n",
+        "print (not (5 < 3))\n",
+        "print (math.gcd (21, 14))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n",
+            "6\n",
+            "7\n",
+            "1.4142135623730951\n",
+            "True\n",
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jYnw8HhHyrOE",
+        "colab_type": "text"
+      },
+      "source": [
+        "haskellのtruncateはpythonのint()だよね。たぶん。`//`だと数字がマイナスになったときの挙動が違ってしまうと思う。\n",
+        "```\n",
+        "Prelude> truncate(-6.59)\n",
+        "-6\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wapp-Vff0303",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "dca84bb5-0b19-49b7-8ead-8767e710c979"
+      },
+      "source": [
+        "print (-6.59 // 1)\n",
+        "print (int (-6.59))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-7.0\n",
+            "-6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LYqikGpK1Pmh",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "Prelude> do { putStr \"2 + 2 = \" ; print (2 + 2) }\n",
+        "2 + 2 = 4\n",
+        "Prelude> do { putStrLn \"ABCDE\" ; putStrLn \"12345\" }\n",
+        "ABCDE\n",
+        "12345\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AzFPfuag1TAQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 233
+        },
+        "outputId": "89e2150e-8057-463f-b89c-961ae8552225"
+      },
+      "source": [
+        "print (\"2 + 2 = \") ; print (2 + 2)\n",
+        "print\n",
+        "print (\"2 + 2 = {}\".str(2 + 2))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 + 2 = \n",
+            "4\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-20-b0af478b04f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"2 + 2 = \"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m;\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"2 + 2 = {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'str'"
+          ]
+        }
+      ]
     }
   ]
 }
