Colaboratory を使用して作成しました

--- a/haskel01.ipynb
+++ b/haskel01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskel01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOCAiEY9/3kmUvNZXvmpVpd",
+      "authorship_tag": "ABX9TyP627vo7OPYteC2fDT+YjAV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -514,36 +514,42 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 233
+          "height": 134
         },
-        "outputId": "89e2150e-8057-463f-b89c-961ae8552225"
+        "outputId": "62f798ed-132f-4201-d6f5-aa6663c30a45"
       },
       "source": [
         "print (\"2 + 2 = \") ; print (2 + 2)\n",
         "print\n",
-        "print (\"2 + 2 = {}\".str(2 + 2))"
+        "print (\"2 + 2 = {}\".format(2 + 2))\n",
+        "print (\"ABCDE\") ; print (\"12345\")\n",
+        "print (\"ABCDE\\n12345\")"
       ],
-      "execution_count": 20,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "2 + 2 = \n",
-            "4\n"
+            "4\n",
+            "2 + 2 = 4\n",
+            "ABCDE\n",
+            "12345\n",
+            "ABCDE\n",
+            "12345\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-b0af478b04f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"2 + 2 = \"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m;\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"2 + 2 = {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'str'"
-          ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ShE3UOWT4J4z",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
