Colaboratory を使用して作成しました

--- a/elm01.ipynb
+++ b/elm01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "elm01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBv0j2ENjMA5u24MOtb41R",
+      "authorship_tag": "ABX9TyOFrcovJ90/RL8QF92R6Eul",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,103 @@
       "source": [
         "# はじめに\n",
         "\n",
-        "はじめにすこし実験。\n"
+        "はじめにすこし実験。\n",
+        "```\n",
+        "> \"hello\"\n",
+        "\"hello\" : String\n",
+        "> 1 + 1\n",
+        "2 : number\n",
+        "> \"hello\" ++ \", elm!!!!\"\n",
+        "\"hello, elm!!!!\" : String\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jiP8ovj7UEmf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "69779a33-63b6-4289-cfe3-c73e08e0ca0b"
+      },
+      "source": [
+        "\"Hello\" + \", Python!!!!\""
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Hello, Python!!!!'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iiOF51tpUuWZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "`+`と`++`と違うけどだいたい同じ。\n",
+        "\n",
+        "```\n",
+        "> greet name =\n",
+        "|   \"Hello \" ++ name ++ \"!\"\n",
+        "|   \n",
+        "<function> : String -> String\n",
+        "> greet \"Alice\"\n",
+        "\"Hello Alice!\" : String\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4eVuaqlXVIm_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "995b924c-9312-428b-e6f6-a3d58f4e347d"
+      },
+      "source": [
+        "def greet (name) :\n",
+        "    return \"Hello \" + name + \"!\"\n",
+        "\n",
+        "greet (\"Alice\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Hello Alice!'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
       ]
     }
   ]
