--- a/elm01.ipynb
+++ b/elm01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "elm01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFrcovJ90/RL8QF92R6Eul",
+      "authorship_tag": "ABX9TyN5S5sficT5h3qRcIQn6wqX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,6 +155,66 @@
           },
           "execution_count": 5
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_r0LoPGvln2M",
+        "colab_type": "text"
+      },
+      "source": [
+        "変数が2つの時はどうするか。\n",
+        "```\n",
+        "> madlib animal adjective =\n",
+        "|   \"The ostentatious \" ++ animal ++ \" wears \" ++ adjective ++ \" shorts.\"\n",
+        "|   \n",
+        "<function> : String -> String -> String\n",
+        "> madlib \"cat\" \"ergonimic\"\n",
+        "\"The ostentatious cat wears ergonimic shorts.\" : String\n",
+        "> madlib (\"butter\" ++ \"fly\") \"metalic\"\n",
+        "\"The ostentatious butterfly wears metalic shorts.\" : String\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Lff44iamOkk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "048b6184-a515-4403-8ce9-8c9b886bd1b7"
+      },
+      "source": [
+        "def madlib (animal, adjective) :\n",
+        "    return \"The ostentatious \" + animal + \" wears \" + adjective + \" shorts.\"\n",
+        "\n",
+        "print (madlib (\"cat\", \"ergonomic\"))\n",
+        "print (madlib (\"butter\" +  \"fly\", \"metalic\"))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The ostentatious cat wears ergonomic shorts.\n",
+            "The ostentatious butterfly wears metalic shorts.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7Bpg5kHMmx3V",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     }
   ]
