--- a/kaggle02function.ipynb
+++ b/kaggle02function.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle02function.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPNVNc+LpuhFCAkl46laTXw",
+      "authorship_tag": "ABX9TyNPCgR3vflSt91LacEO4bCd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,16 +331,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4I1dRiY39SRl",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "YM5UgIDOxd5t",
         "colab_type": "text"
       },
@@ -427,7 +417,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Pythonはこのような関数を作ることを許容しています。返り値のない関数の結果は特殊な値の`None`になります。Pythonの`None`は他の言語でいう`null`に相当する概念です。"
+        "Pythonはこのような関数を作ることを許容している。返り値のない関数の結果は特殊な値の`None`になる。Pythonの`None`は他の言語でいう`null`に相当する概念。"
       ]
     },
     {
@@ -467,8 +457,9 @@
         "colab_type": "text"
       },
       "source": [
-        "`return`文(ステートメント)のない関数least_differenceは関数としては意味をなしません。しかし副作用(side effect)のある関数は返り値がなくても役に立つことがあります。そのような例をすでに2つ見てきています。`print()`と`help()`です。\n",
-        "`print()`と`help()`は返り値ではなく画面へ出力を出すという副作用のために呼び出されます。他にもファイルへの書き出しや入力を変更する関数などがこれに当たります。\n",
+        "`return`文(ステートメント)のない関数least_differenceは関数としては意味をなさない。しかし副作用(side effect)のある関数は返り値がなくても役に立つことがある。そのような例をすでに2つ(`print()`、`help()`)見てきている。\n",
+        "\n",
+        "`print()`と`help()`は返り値ではなく画面へ出力を出すという副作用のために呼び出される。他にもファイルへの書き出しや入力を変更する関数などがこれに当たる。\n",
         "\n"
       ]
     },
@@ -506,8 +497,9 @@
         "colab_type": "text"
       },
       "source": [
-        "## 引数のデフォルト値\n",
-        "`help(print)`の説明のところで、関数`print`がオプションとしていくつかの引数を取るのを見ました。たとえば出力の項目の間に入れる文字列を指定するには`sep`という変数に値を入れます。\n"
+        "# 引数のデフォルト値\n",
+        "\n",
+        "`help(print)`の説明のところで、関数`print`がオプションとしていくつかの引数を取るのを見た。たとえば出力の項目の間に入れる文字列を指定するには`sep`という変数に値を入る。\n"
       ]
     },
     {
@@ -542,7 +534,7 @@
         "colab_type": "text"
       },
       "source": [
-        "しかし、値を指定しない場合、`sep`にはデフォルトの値である\" \"(スペース1個)が入ります。\n"
+        "しかし、値を指定しない場合、`sep`にはデフォルトの値である\" \"(スペース1個)が入る。\n"
       ]
     },
     {
@@ -577,7 +569,7 @@
         "colab_type": "text"
       },
       "source": [
-        "関数の定義の時にデフォルト値を指定するには、次のようにします。"
+        "関数の定義の時にデフォルト値を指定するには、次のようにする。"
       ]
     },
     {
@@ -598,7 +590,7 @@
         "greet()\n",
         "greet(who=\"Kaggle\")\n",
         "\n",
-        "# 明確で誤解が生じる余地のない場合、引数の名前を省略できます。\n",
+        "# 明確で誤解が生じる余地のない場合、引数の名前を省略できる。\n",
         "greet(\"world\")"
       ],
       "execution_count": null,
@@ -622,9 +614,10 @@
       },
       "source": [
         "# 関数から関数を呼び出す\n",
-        "関数から関数を呼び出す、関数の引数として関数を使う、ということができますが、HaskellやSchemeのような関数型プログラムほど抽象的なことができるわけではないので、注意が必要です。\n",
         "\n",
-        "とりあえず例を示します。"
+        "関数から関数を呼び出す、関数の引数として関数を使う、ということができる、HaskellやSchemeのような関数型プログラムほど抽象的なことができるわけではないので、注意が必要。\n",
+        "\n",
+        "とりあえず例を示す。"
       ]
     },
     {
@@ -682,9 +675,9 @@
         "colab_type": "text"
       },
       "source": [
-        "関数に作用する関数は高階関数\"Higher order functions\"と呼ばれます。\n",
+        "関数に作用する関数は高階関数\"Higher order functions\"と呼ばれる。\n",
         "\n",
-        "Pythonの`max`は複数の引数の中で最大のものを返しますが、オプションとして`key`に関数を指定すると`key(x)`が最大なxを返します。\n"
+        "Pythonの`max`は複数の引数の中で最大のものを返すが、オプションとして`key`に関数を指定すると`key(x)`が最大なxを返す。\n"
       ]
     },
     {
@@ -738,12 +731,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ad8NofC60rCN",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "M_5a-M3Xkv3d",
         "colab_type": "text"
       },
       "source": [
         "## 問題 1. `docstring`に基づいて関数を完成させる\n",
-        "ヒント: `round`はPythonのビルトイン関数です。\n"
+        "\n",
+        "ヒント: `round`はPythonの組み込み関数。\n"
       ]
     },
     {
@@ -806,6 +810,16 @@
           },
           "execution_count": 4
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MYWWmwvi09mM",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
